--- a/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m 2020/c_invoice_withholding_sub_vat.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m 2020/c_invoice_withholding_sub_vat.jrxml
@@ -1,20 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.6.0.final utlizzo versione della libreria JasperReports6.6.0  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="c_invoice_withholding_sub_vat" pageWidth="190" pageHeight="60" whenNoDataType="AllSectionsNoDetail" columnWidth="190" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="25ddd7c1-15b6-4842-8b87-d5aa5e04d31f">
+<!-- Created with Jaspersoft Studio version 6.12.2.final utlizzo versione della libreria JasperReports6.12.2-75c5e90a222ab406e416cbf590a5397028a52de3  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="c_invoice_withholding_sub_vat" pageWidth="185" pageHeight="60" whenNoDataType="AllSectionsNoDetail" columnWidth="185" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="25ddd7c1-15b6-4842-8b87-d5aa5e04d31f">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere Produzione"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere"/>
 	<parameter name="RECORD_ID" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -75,14 +66,14 @@ WHERE
 		<band height="11">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 			<frame>
-				<reportElement x="0" y="0" width="190" height="11" uuid="0168b3f7-6b28-4e61-b48b-5732b24075b4">
+				<reportElement x="0" y="0" width="185" height="11" uuid="0168b3f7-6b28-4e61-b48b-5732b24075b4">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.5"/>
 				</box>
 				<staticText>
-					<reportElement mode="Opaque" x="0" y="0" width="190" height="11" backcolor="#A8EB6E" uuid="0e5835da-3706-4fa7-9a45-8b9bc1ec2a02"/>
+					<reportElement mode="Opaque" x="0" y="0" width="185" height="11" backcolor="#DBFFBD" uuid="0e5835da-3706-4fa7-9a45-8b9bc1ec2a02"/>
 					<box>
 						<pen lineWidth="0.5"/>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -91,7 +82,7 @@ WHERE
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font size="8" isBold="true"/>
+						<font fontName="DejaVu Sans Mono" size="8" isBold="true"/>
 					</textElement>
 					<text><![CDATA[RIEPILOGO IVA]]></text>
 				</staticText>
@@ -100,10 +91,10 @@ WHERE
 	</title>
 	<columnHeader>
 		<band height="7" splitType="Stretch">
-			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
+			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
 			<frame>
-				<reportElement mode="Opaque" x="0" y="0" width="190" height="7" backcolor="#A8EB6E" uuid="d77622fe-bf75-40ee-8867-7849e0af2873">
-					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
+				<reportElement mode="Opaque" x="0" y="0" width="185" height="7" backcolor="#DBFFBD" uuid="d77622fe-bf75-40ee-8867-7849e0af2873">
+					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.grid.JSSGridBagLayout"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.5"/>
@@ -113,32 +104,52 @@ WHERE
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<staticText>
-					<reportElement x="0" y="0" width="40" height="7" uuid="56b97948-d25c-46a3-844e-2f1e5c2c8c9a">
+					<reportElement x="0" y="0" width="43" height="7" backcolor="#DBFFBD" uuid="56b97948-d25c-46a3-844e-2f1e5c2c8c9a">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="345f4eb1-ce2f-480e-8462-fc1566cd5cee"/>
+						<property name="com.jaspersoft.layout.grid.x" value="-1"/>
+						<property name="com.jaspersoft.layout.grid.y" value="-1"/>
+						<property name="com.jaspersoft.layout.grid.weight.x" value="0.5"/>
+						<property name="com.jaspersoft.layout.grid.weight.y" value="1.0"/>
+						<property name="com.jaspersoft.layout.grid.rowspan" value="1"/>
+						<property name="com.jaspersoft.layout.grid.colspan" value="1"/>
+						<property name="com.jaspersoft.layout.grid.weight.fixed" value="false"/>
 					</reportElement>
-					<box leftPadding="5"/>
+					<box leftPadding="5">
+						<pen lineWidth="0.25"/>
+					</box>
 					<textElement verticalAlignment="Middle">
-						<font size="6"/>
+						<font fontName="DejaVu Sans Mono" size="4"/>
 					</textElement>
 					<text><![CDATA[IND.]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="40" y="0" width="90" height="7" uuid="3b95c19e-c139-4a9a-bff9-c16d9a8db54b">
+					<reportElement x="43" y="0" width="84" height="7" backcolor="#DBFFBD" uuid="3b95c19e-c139-4a9a-bff9-c16d9a8db54b">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4730a37e-9827-46ef-a3a2-4be1a74c1457"/>
 					</reportElement>
-					<box rightPadding="5"/>
+					<box rightPadding="5">
+						<pen lineWidth="0.25"/>
+					</box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font size="6"/>
+						<font fontName="DejaVu Sans Mono" size="4" isBold="true"/>
 					</textElement>
-					<text><![CDATA[IMPONIBILE]]></text>
+					<text><![CDATA[Imponibile/Taxable/Untaxable]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="130" y="0" width="60" height="7" uuid="dd78eab7-acd6-41e3-8733-08d51af777a6">
+					<reportElement x="127" y="0" width="58" height="7" backcolor="#DBFFBD" uuid="dd78eab7-acd6-41e3-8733-08d51af777a6">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="69798bca-668d-4761-8dbb-614747510b22"/>
+						<property name="com.jaspersoft.layout.grid.x" value="-1"/>
+						<property name="com.jaspersoft.layout.grid.y" value="-1"/>
+						<property name="com.jaspersoft.layout.grid.weight.x" value="0.7"/>
+						<property name="com.jaspersoft.layout.grid.weight.y" value="1.0"/>
+						<property name="com.jaspersoft.layout.grid.rowspan" value="1"/>
+						<property name="com.jaspersoft.layout.grid.colspan" value="1"/>
+						<property name="com.jaspersoft.layout.grid.weight.fixed" value="false"/>
 					</reportElement>
-					<box rightPadding="5"/>
+					<box rightPadding="5">
+						<pen lineWidth="0.25"/>
+					</box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font size="6"/>
+						<font fontName="DejaVu Sans Mono" size="4"/>
 					</textElement>
 					<text><![CDATA[IMPOSTA]]></text>
 				</staticText>
@@ -147,45 +158,77 @@ WHERE
 	</columnHeader>
 	<detail>
 		<band height="7" splitType="Stretch">
-			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
+			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<frame>
-				<reportElement x="0" y="0" width="190" height="7" uuid="a82f73d7-61b6-4909-8eff-6bab3c8d5b44">
-					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
+				<reportElement x="0" y="0" width="185" height="7" uuid="a82f73d7-61b6-4909-8eff-6bab3c8d5b44">
+					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.grid.JSSGridBagLayout"/>
 				</reportElement>
 				<box>
-					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<pen lineWidth="0.25"/>
+					<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textField>
-					<reportElement x="0" y="0" width="40" height="7" uuid="6b67282d-87c1-4e30-bd23-cb1e6d9b2e98">
+					<reportElement x="0" y="0" width="43" height="7" uuid="6b67282d-87c1-4e30-bd23-cb1e6d9b2e98">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="345f4eb1-ce2f-480e-8462-fc1566cd5cee"/>
+						<property name="com.jaspersoft.layout.grid.x" value="-1"/>
+						<property name="com.jaspersoft.layout.grid.y" value="-1"/>
+						<property name="com.jaspersoft.layout.grid.weight.x" value="0.5"/>
+						<property name="com.jaspersoft.layout.grid.weight.y" value="1.0"/>
+						<property name="com.jaspersoft.layout.grid.rowspan" value="1"/>
+						<property name="com.jaspersoft.layout.grid.colspan" value="1"/>
+						<property name="com.jaspersoft.layout.grid.weight.fixed" value="false"/>
 					</reportElement>
-					<box leftPadding="5"/>
+					<box leftPadding="5">
+						<pen lineWidth="0.25"/>
+						<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+					</box>
 					<textElement verticalAlignment="Middle">
-						<font size="6"/>
+						<font fontName="DejaVu Sans Mono" size="6"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_tax_taxindicator}]]></textFieldExpression>
 				</textField>
 				<textField pattern="¤#,##0.00;¤-#,##0.00">
-					<reportElement x="40" y="0" width="90" height="7" uuid="cc0ed8b5-cecd-4262-9507-7512271f53c0">
+					<reportElement x="43" y="0" width="84" height="7" uuid="cc0ed8b5-cecd-4262-9507-7512271f53c0">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4730a37e-9827-46ef-a3a2-4be1a74c1457"/>
 					</reportElement>
-					<box rightPadding="5"/>
+					<box rightPadding="5">
+						<pen lineWidth="0.25"/>
+						<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+					</box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font size="6"/>
+						<font fontName="DejaVu Sans Mono" size="6"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_invoicetax_taxbaseamt}]]></textFieldExpression>
 				</textField>
 				<textField pattern="¤#,##0.00;¤-#,##0.00">
-					<reportElement x="130" y="0" width="60" height="7" uuid="e49d8247-28e7-456c-bfa1-8066f056a2bd">
+					<reportElement x="127" y="0" width="58" height="7" uuid="e49d8247-28e7-456c-bfa1-8066f056a2bd">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="69798bca-668d-4761-8dbb-614747510b22"/>
+						<property name="com.jaspersoft.layout.grid.x" value="-1"/>
+						<property name="com.jaspersoft.layout.grid.y" value="-1"/>
+						<property name="com.jaspersoft.layout.grid.weight.x" value="0.7"/>
+						<property name="com.jaspersoft.layout.grid.weight.y" value="1.0"/>
+						<property name="com.jaspersoft.layout.grid.rowspan" value="1"/>
+						<property name="com.jaspersoft.layout.grid.colspan" value="1"/>
+						<property name="com.jaspersoft.layout.grid.weight.fixed" value="false"/>
 					</reportElement>
-					<box rightPadding="5"/>
+					<box rightPadding="5">
+						<pen lineWidth="0.25"/>
+						<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+					</box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font size="6"/>
+						<font fontName="DejaVu Sans Mono" size="6"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_invoicetax_taxamt}]]></textFieldExpression>
 				</textField>
@@ -194,16 +237,27 @@ WHERE
 		<band height="6">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
 			<frame>
-				<reportElement x="0" y="0" width="190" height="6" isRemoveLineWhenBlank="true" uuid="28483c2c-216c-4ab3-adc0-35ea832be5f5">
+				<reportElement x="0" y="0" width="185" height="6" isRemoveLineWhenBlank="true" uuid="28483c2c-216c-4ab3-adc0-35ea832be5f5">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 				</reportElement>
+				<box>
+					<leftPen lineWidth="0.25"/>
+					<bottomPen lineWidth="0.25"/>
+					<rightPen lineWidth="0.25"/>
+				</box>
 				<textField isBlankWhenNull="true">
-					<reportElement x="0" y="0" width="190" height="6" isRemoveLineWhenBlank="true" uuid="73b4392b-320f-42e8-8ba1-5252f41e0063">
+					<reportElement x="0" y="0" width="185" height="6" isRemoveLineWhenBlank="true" uuid="73b4392b-320f-42e8-8ba1-5252f41e0063">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="2a42e339-3cca-4032-94d6-c0d24d9732b4"/>
 					</reportElement>
-					<box leftPadding="5"/>
+					<box leftPadding="5">
+						<pen lineWidth="0.25"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
 					<textElement verticalAlignment="Middle">
-						<font size="5" isBold="true"/>
+						<font fontName="DejaVu Sans Mono" size="4" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_tax_note}]]></textFieldExpression>
 				</textField>
