--- a/Estratto Conto 822_conologico/customerstatement821b.jrxml
+++ b/Estratto Conto 822_conologico/customerstatement821b.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.12.2.final utlizzo versione della libreria JasperReports6.12.2-75c5e90a222ab406e416cbf590a5397028a52de3  -->
+<!-- Created with Jaspersoft Studio version 6.9.0.final utlizzo versione della libreria JasperReports5.2.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ec" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8b17b5b8-d5a8-47a1-96a0-f5fb5ff0a427">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w1" value="544"/>
@@ -488,7 +488,7 @@ END
 					</textElement>
 					<textFieldExpression><![CDATA[$F{documentno}]]></textFieldExpression>
 				</textField>
-				<textField textAdjust="StretchHeight" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
+				<textField pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
 					<reportElement style="txt_black" x="146" y="0" width="228" height="14" uuid="32a2889f-0b99-48e2-a2df-d1081c31b5ef">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9069d2df-1283-48e0-b303-9e9f3e60af74"/>
 						<property name="com.jaspersoft.layout.grid.x" value="-1"/>
@@ -505,7 +505,7 @@ END
 					</textElement>
 					<textFieldExpression><![CDATA[$F{tipodoc} +" - "+$F{inv2_documentno}+" "+$F{bank}]]></textFieldExpression>
 				</textField>
-				<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00">
+				<textField pattern="¤#,##0.00;¤-#,##0.00">
 					<reportElement style="txt_black" x="374" y="0" width="91" height="14" uuid="3fd831d2-515d-46c6-bb4e-06b74a477ab0">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a1400367-6e02-4a06-9e49-caf1b01f4a51"/>
 						<property name="com.jaspersoft.layout.grid.x" value="-1"/>
@@ -521,7 +521,7 @@ END
 					</textElement>
 					<textFieldExpression><![CDATA[$F{grandtotal}]]></textFieldExpression>
 				</textField>
-				<textField textAdjust="ScaleFont" pattern="¤#,##0.00;¤-#,##0.00">
+				<textField pattern="¤#,##0.00;¤-#,##0.00">
 					<reportElement x="465" y="0" width="90" height="14" forecolor="#0000CC" uuid="fae651ce-760c-4443-b3ab-b77544182df7">
 						<property name="com.jaspersoft.layout.grid.x" value="-1"/>
 						<property name="com.jaspersoft.layout.grid.y" value="-1"/>
